# poetry-artifactregistry-plugin

./: pyproject.toml
src/poetry_artifactregistry_plugin/: __init__.py  gcloud.py  plugins.py
